--- a/HRMS1/Web.config
+++ b/HRMS1/Web.config
@@ -6,9 +6,7 @@
 <configuration>
 	<connectionStrings>
   <add name="dbconn" connectionString="Data Source=DESKTOP-AT02LFC\SQLEXPRESS;Initial Catalog=data_impl;Integrated Security=True; MultipleActiveResultSets=true" />
-  <add name="data_implConnectionString" connectionString="Data Source=DESKTOP-AT02LFC\SQLEXPRESS;Initial Catalog=data_impl;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
-   providerName="Microsoft.Data.SqlClient" />
-  <add name="data_implConnectionString2" connectionString="Data Source=DESKTOP-AT02LFC\SQLEXPRESS;Initial Catalog=data_impl;Integrated Security=True;Encrypt=False"
+  <add name="data_implConnectionString3" connectionString="Data Source=DESKTOP-AT02LFC\SQLEXPRESS;Initial Catalog=data_impl;Integrated Security=True"
    providerName="Microsoft.Data.SqlClient" />
  </connectionStrings>
   <system.web>
